Fixed footer on mobile

--- a/css/home/HomePanel.css
+++ b/css/home/HomePanel.css
@@ -65,7 +65,7 @@
     -ms-transform: translateX(-50%);
     -o-transform: translateX(-50%);
     transform: translateX(-50%);
-    z-index: 2;
+    z-index: 5;
 }
 #home-panel-frame-div > div:nth-child(1) > div:nth-child(2) > div:nth-child(1) {
     overflow: hidden;
@@ -91,7 +91,7 @@
     font-size: var(--paragraph-1);
     color: #FFFFFF;
 
-    background-color: rgb(0, 0, 0, 0.25);
+    background-color: rgb(0, 0, 0, 0.5);
     border-radius: 4px;
     padding: 12px;
 }
@@ -426,7 +426,7 @@
     position: absolute;
     left: 50%;
     transform: translateX(-50%);
-    top: -100%;
+    top: -64px;
     height: 42px;
     color: #FFFFFF;
     font-weight: 500;
@@ -582,7 +582,7 @@
     #home-panel-frame-div > div:nth-child(5) {
         flex-wrap: wrap;
         padding: 12px;
-        height: 86px;
+        height: 114px;
     }
     #home-panel-frame-div > div:nth-child(5) > div:nth-child(1) {
         /* flex-basis: 100%; */
@@ -594,6 +594,10 @@
         transform: translate(0px, 0px);
         order: 1;
         flex-basis: 100%;
+
+        margin-bottom: 24px;
+        width: 100%;
+        justify-content: space-between;
     }
     #home-panel-frame-div > div:nth-child(5) > div:nth-child(3) {
         order: 3;
@@ -605,6 +609,9 @@
 @media (max-width: 450px) {
     #home-panel-frame-div > div:nth-child(5) > div:nth-child(1) > div:nth-child(2) {
         display: none;
+    }
+    #home-panel-frame-div.dark > div:nth-child(1) > div:nth-child(2) > div:nth-child(2) {
+        background-color: rgb(0, 0, 0, 0.85)
     }
 }
 
@@ -661,7 +668,7 @@
 
 @media (max-width: 600px) {
     #home-panel-frame-div > div:nth-child(1) {
-        height: 400px;
+        /* height: 400px; */
         background-color: rgb(55, 6, 1);
     }
     #home-panel-frame-div.dark > div:nth-child(1) {
@@ -679,6 +686,7 @@
     }
     #home-panel-frame-div > div:nth-child(1) > div:nth-child(2) > div:nth-child(2) {
         font-size: 14px;
+        margin-top: 24px;
     }
     #home-panel-frame-div > div:nth-child(1) > div:nth-child(2) > div:nth-child(1) {
         margin-right: 0px;
